--- a/Web Jkb 1/artikel.html
+++ b/Web Jkb 1/artikel.html
@@ -31,7 +31,7 @@
           </div>
           <div class="brand-text">
             <div class="brand-name">GLOBAL EXPORT INDONESIA</div>
-            <div class="brand-subtitle">Your Trusted Export Partner</div>
+            <div class="brand-subtitle">By Ganesha Arta Adhiwangsa</div>
           </div>
         </div>
         <button
@@ -46,6 +46,9 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="beranda.html">Beranda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="produk.html">Produk</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
