--- a/Web Jkb 1/index.html
+++ b/Web Jkb 1/index.html
@@ -56,6 +56,9 @@
               <a class="nav-link" href="#home">Beranda</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#product">Produk</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#about">Tentang Kami</a>
             </li>
             <li class="nav-item">
