--- a/Web Jkb 1/beranda.html
+++ b/Web Jkb 1/beranda.html
@@ -48,6 +48,9 @@
               <a class="nav-link active" href="beranda.html">Beranda</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="produk.html">Produk</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
             </li>
             <li class="nav-item">
