--- a/Web Jkb 1/kontak.html
+++ b/Web Jkb 1/kontak.html
@@ -31,7 +31,7 @@
           </div>
           <div class="brand-text">
             <div class="brand-name">GLOBAL EXPORT INDONESIA</div>
-            <div class="brand-subtitle">Your Trusted Export Partner</div>
+            <div class="brand-subtitle">By Ganesha Arta Adhiwangsa</div>
           </div>
         </div>
         <button
@@ -46,6 +46,9 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="beranda.html">Beranda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="produk.html">Produk</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
@@ -116,9 +119,8 @@
             <div class="card mb-3">
               <div class="card-body">
                 <h6><i class="fas fa-clock text-orange me-2"></i>Jam Operasional</h6>
-                <p class="mb-1"><strong>Senin - Jumat:</strong> 08:00 - 17:00 WIB</p>
-                <p class="mb-0"><strong>Sabtu:</strong> 08:00 - 12:00 WIB</p>
-                <small class="text-muted">Minggu & Hari Libur: Tutup</small>
+                <p class="mb-1"><strong>Senin - Jumat :</strong> 08:00 - 17:00 WIB</p>
+                <small class="text-muted">Sabtu, Minggu, & Hari Libur : Tutup</small>
               </div>
             </div>
 
